[gd_scene load_steps=4 format=1]

[ext_resource path="res://ScoreBall.gd" type="Script" id=1]
[ext_resource path="res://sprites.tex" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource/name = "Start"
length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BlueScore/Sprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlueScore/Sprite1:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1.3, 1.4, 1.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BlueScore/Sprite2:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 1.8, 2, 2.1, 2.2, 2.3 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BlueScore/Sprite3:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 2.3, 2.5, 2.7, 2.8, 2.9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BlueScore/Sprite4:visibility/visible")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 2.8, 2.9, 3, 3.1, 3.2 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("RedScore/Sprite:visibility/visible")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 2.8, 2.9, 3, 3.1, 3.2 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("RedScore/Sprite1:visibility/visible")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 2.3, 2.5, 2.7, 2.8, 2.9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("RedScore/Sprite2:visibility/visible")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 1.8, 2, 2.1, 2.2, 2.3 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("RedScore/Sprite3:visibility/visible")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0, 1.3, 1.4, 1.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("RedScore/Sprite4:visibility/visible")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": FloatArray( 0, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}

[node name="Score" type="StaticBody2D"]

visibility/opacity = 0.7
input/pickable = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )

[node name="BlueScore" type="StaticBody2D" parent="."]

input/pickable = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="BlueScore"]

visibility/opacity = 0.4
transform/pos = Vector2( 370, 130 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( -2014.36, -306.832 )
region = true
region_rect = Rect2( 128, 192, 128, 128 )

[node name="Sprite1" type="Sprite" parent="BlueScore"]

visibility/opacity = 0.4
transform/pos = Vector2( 350, 107 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( -2014.36, -306.832 )
region = true
region_rect = Rect2( 128, 192, 128, 128 )

[node name="Sprite2" type="Sprite" parent="BlueScore"]

visibility/opacity = 0.4
transform/pos = Vector2( 340, 76 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( -2014.36, -306.832 )
region = true
region_rect = Rect2( 128, 192, 128, 128 )

[node name="Sprite3" type="Sprite" parent="BlueScore"]

visibility/opacity = 0.4
transform/pos = Vector2( 350, 45 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( -2014.36, -306.832 )
region = true
region_rect = Rect2( 128, 192, 128, 128 )

[node name="Sprite4" type="Sprite" parent="BlueScore"]

visibility/opacity = 0.4
transform/pos = Vector2( 370, 22 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( -2014.36, -306.832 )
region = true
region_rect = Rect2( 128, 192, 128, 128 )

[node name="RedScore" type="StaticBody2D" parent="."]

transform/scale = Vector2( -1, 1 )
input/pickable = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="RedScore"]

visibility/opacity = 0.5
transform/pos = Vector2( 370, 130 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( -2014.36, -306.832 )
region = true
region_rect = Rect2( 256, 192, 128, 128 )

[node name="Sprite1" type="Sprite" parent="RedScore"]

visibility/opacity = 0.5
transform/pos = Vector2( 350, 107 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( -2014.36, -306.832 )
region = true
region_rect = Rect2( 256, 192, 128, 128 )

[node name="Sprite2" type="Sprite" parent="RedScore"]

visibility/opacity = 0.5
transform/pos = Vector2( 340, 76 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( -2014.36, -306.832 )
region = true
region_rect = Rect2( 256, 192, 128, 128 )

[node name="Sprite3" type="Sprite" parent="RedScore"]

visibility/opacity = 0.5
transform/pos = Vector2( 350, 45 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( -2014.36, -306.832 )
region = true
region_rect = Rect2( 256, 192, 128, 128 )

[node name="Sprite4" type="Sprite" parent="RedScore"]

visibility/opacity = 0.5
transform/pos = Vector2( 370.599, 22 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( -2014.36, -306.832 )
region = true
region_rect = Rect2( 256, 192, 128, 128 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Start = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Start"


